icons, CICD